--- a/src/App.scss
+++ b/src/App.scss
@@ -4,4 +4,8 @@
   max-height: 100vh;
 
   overflow-y: auto;
+
+  background-image: url("municipality-of-tuy_header-1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
