--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -3,3 +3,4 @@ $inrioSerif: 'Inria Serif', serif;
 $default-color : #515151;
 $hover-background : #6F94A9;
 $active-background : #80C8F0;
+$row-more-button-background : #4E4D4D;
