--- a/src/components/pages/dashboard/dashboard.scss
+++ b/src/components/pages/dashboard/dashboard.scss
@@ -12,6 +12,8 @@
         width: 100%;
         height: 100%;
         max-height: 100%;
+
+        background-color: white;
     }
     
     &.collapse {
