--- a/src/components/pages/dashboard/navButtonDropdown.scss
+++ b/src/components/pages/dashboard/navButtonDropdown.scss
@@ -73,6 +73,8 @@
         }
     
         span {
+            white-space: nowrap;
+
             font-size: 14px;
             opacity: 1;
             visibility: visible;
