--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,11 @@
+@import "./sass/globals";
+
 *, *::before, *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: $inter;
 }
 
 body {
