--- a/src/components/pages/dashboard/windows/tabs/bannersManagerTab.scss
+++ b/src/components/pages/dashboard/windows/tabs/bannersManagerTab.scss
@@ -1,3 +1,5 @@
+@import "../../../../../sass/mediaqueries";
+
 #banners-tab {
     position: relative;
 
@@ -197,6 +199,16 @@
                     padding-bottom: 30px;
                 }
 
+            }
+        }
+
+        @include w980 {
+            grid-template-columns: 1fr;
+            grid-template-rows: min-content min-content;
+
+            .banners-list {
+                grid-row: 2 / 3;
+                padding-right: 0;
             }
         }
 
