--- a/src/components/pages/dashboard/windows/tabs/dashboardTab.scss
+++ b/src/components/pages/dashboard/windows/tabs/dashboardTab.scss
@@ -1,10 +1,19 @@
 @import "../../../../../sass/globals";
+@import "../../../../../sass/mediaqueries";
 
 #dashboard-tab {
 
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+
     .counters-container {
-        display: flex;
-        flex-flow: column;
+        width: 100%;
+
+        display: grid;
+        // flex-flow: column;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        justify-content: center;
         gap: 10px;
 
         .counter {
@@ -13,22 +22,94 @@
     
             width: fit-content;
             width: 200px;
+            width: 100%;
             height: fit-content;
             height: 80px;
             padding: 20px;
     
-            border-radius: 5px;
+            border-radius: 4px;
             background-color: #9ADBFF;
-    
+            
+            transition: transform 0.2s;
+
             span {
                 font-weight: bold;
                 font-family: $inter;
 
                 &:nth-child(2) {
                     margin-left: auto;
+                    font-size: 1.2rem;
                 }
             }
+
+            &__pending {
+                background-color: #ffb89a;
+            }
+
+            &__serve {
+                background-color: #9affba;
+            }
+            
+            &__blotters {
+                background-color: #ff9a9a;
+            }
+
+            &:hover {
+                transform: translateY(-4px);
+            }
         }
+
+        @include w980 {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: min-content min-content;
+        }
+
+    }
+
+    .charts-containers {
+
+        position: relative;
+
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+        padding: 20px;
+
+        width: 100%;
+
+        border-radius: 10px;
+        background-color: white;
+        box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.1);
+
+    }
+
+    .banner-event-splitter {
+
+        position: relative;
+
+        display: grid;
+        grid-template-columns: 60% calc(40% - 20px);
+        gap: 20px;
+        align-items: center;
+
+        .db-banners {
+            position: relative;
+
+            width: 100%;
+            height: fit-content;
+
+            background-color: rgb(215, 215, 215);
+            border-radius: 10px;
+        }
+
+        .db-events {
+            position: relative;
+
+            width: 100%;
+            height: 100%;
+        }
+
     }
 
 
