--- a/src/components/pages/dashboard/windows/tabs/residentsTab.scss
+++ b/src/components/pages/dashboard/windows/tabs/residentsTab.scss
@@ -1,4 +1,5 @@
 @import "../../../../../sass/globals";
+@import "../../../../../sass/mediaqueries";
 
 #residents-tab {
     display: flex;
@@ -210,6 +211,7 @@
 
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         gap: 14px;
 
         width: 100%;
@@ -297,75 +299,80 @@
             }
         }
 
-        .entry-pagination-container {
-            display: flex;
+        .entry-pagination {
+
+            @include w1025 {
+                margin-left: auto;
+            }
+
+            // display: flex;
             // margin-left: auto;
 
-            button  {
-                position: relative;
+            // button  {
+            //     position: relative;
 
-                width: 36px;
-                height: 36px;
+            //     width: 36px;
+            //     height: 36px;
 
-                border: none;
-                background-color: transparent;
-                font-family: $inter;
-                font-weight: 700;
+            //     border: none;
+            //     background-color: transparent;
+            //     font-family: $inter;
+            //     font-weight: 700;
 
-                transition: background-color 0.2s;
+            //     transition: background-color 0.2s;
                 
-                span {
-                    position: absolute;
+            //     span {
+            //         position: absolute;
 
-                    width: 12px;
-                    height: 12px;
+            //         width: 12px;
+            //         height: 12px;
 
-                    transition: border-color 0.2s;
-                }
+            //         transition: border-color 0.2s;
+            //     }
 
-                &#prev-page {
-                    border-top-left-radius: 50%;
-                    border-bottom-left-radius: 50%;
-                    span {
-                        top: 50%;
-                        left: 50%;
-                        transform-origin: center;
-                        transform: translate(-20%, -50%) rotate(45deg);
-                        border-left: 3px solid gray;
-                        border-bottom: 3px solid gray;
-                    }
-                }
-                &#next-page {
-                    border-top-right-radius: 50%;
-                    border-bottom-right-radius: 50%;
-                    span {
-                        top: 50%;
-                        left: 50%;
-                        transform-origin: center;
-                        transform: translate(-80%, -50%) rotate(-45deg);
-                        border-right: 3px solid gray;
-                        border-bottom: 3px solid gray;
-                    }
-                }
+            //     &#prev-page {
+            //         border-top-left-radius: 50%;
+            //         border-bottom-left-radius: 50%;
+            //         span {
+            //             top: 50%;
+            //             left: 50%;
+            //             transform-origin: center;
+            //             transform: translate(-20%, -50%) rotate(45deg);
+            //             border-left: 3px solid gray;
+            //             border-bottom: 3px solid gray;
+            //         }
+            //     }
+            //     &#next-page {
+            //         border-top-right-radius: 50%;
+            //         border-bottom-right-radius: 50%;
+            //         span {
+            //             top: 50%;
+            //             left: 50%;
+            //             transform-origin: center;
+            //             transform: translate(-80%, -50%) rotate(-45deg);
+            //             border-right: 3px solid gray;
+            //             border-bottom: 3px solid gray;
+            //         }
+            //     }
 
-                &.pagination-btn {
-                    transition: transform 0.2s;
-                }
+            //     &.pagination-btn {
+            //         transition: transform 0.2s;
+            //     }
 
                 
-                &:hover {
-                    background-color: rgb(240, 244, 248);
-                }
+            //     &:hover {
+            //         background-color: rgb(240, 244, 248);
+            //     }
                 
-                &:active {
-                    background-color: $active-background;
-                }
+            //     &:active {
+            //         background-color: $active-background;
+            //     }
 
-                &.current {
-                    transform: translateY(-3px);
-                    background-color: $active-background;
-                }
-            }
+            //     &.current {
+            //         transform: translateY(-3px);
+            //         background-color: $active-background;
+            //     }
+            // }
 
         }
 
@@ -431,6 +438,10 @@
                         background-color: transparent;
                     }
                 }
+            }
+
+            @include w1025 {
+                top: calc(0% - 30px + 113px);
             }
         }
         tbody {
